Fix #174, g and h overlapping for family question

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,11 +116,11 @@ button:active {
 	text-shadow: 2px 2px 10px black;
 	text-align: center;
 	font-size: 22px;
-  white-space: pre-line;
+	white-space: pre-line;
 }
 
 .captions {
-	line-height: 98%;
+	line-height: 22px;
 	padding-bottom: 8px;
 	bottom: 0;
 	z-index: 14;
